worked on mobile for fixed height while on click

--- a/style.css
+++ b/style.css
@@ -15,11 +15,17 @@
   font-weight: 400;
   font-style: normal;
 }
+.height {
+  max-height: 100vh;
+  overflow: hidden;
+}
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  z-index: 5;
 }
 
 .header-nav,
@@ -207,11 +213,12 @@
   .header-nav {
     display: block;
   }
+
   .header-nav ul {
     background-color: rgb(233, 223, 213);
     display: block;
     position: absolute;
-    top: 80px;
+    top: 0;
     left: 0;
     display: flex;
     flex-direction: column;
@@ -221,7 +228,7 @@
     width: 100%;
     height: 100vh;
     gap: 20px;
-    z-index: 3;
+    z-index: -1;
     transform: translate(-100%, 0);
     transition: transform 0.58s ease-in;
   }
@@ -233,6 +240,9 @@
     font-size: 1rem;
     color: #000;
   }
+  /* i {
+    transition: all 5s ease-in;
+  } */
 }
 @media (min-width: 1024px) {
   .header,
